--- a/brand_teacher/index.html
+++ b/brand_teacher/index.html
@@ -517,7 +517,7 @@
                 <li itemscope itemtype="http://schema.org/Review" class="reviews__slider--item">
                   <div itemscope itemtype="http://schema.org/Person" class="reviews__people-box">
                     <div class="reviews__slider--img">
-                      <amp-img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
+                      <img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
                     </div>
                     <div class="reviews__slider--people">
                       <p itemprop="author" class="reviews__slider--name">Фамилия Имя</p>
@@ -532,7 +532,7 @@
                 <li itemscope itemtype="http://schema.org/Review" class="reviews__slider--item">
                   <div itemscope itemtype="http://schema.org/Person" class="reviews__people-box">
                     <div class="reviews__slider--img">
-                      <amp-img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
+                      <img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
                     </div>
                     <div class="reviews__slider--people">
                       <p itemprop="author" class="reviews__slider--name">Фамилия Имя</p>
@@ -547,7 +547,7 @@
                 <li itemscope itemtype="http://schema.org/Review" class="reviews__slider--item">
                   <div itemscope itemtype="http://schema.org/Person" class="reviews__people-box">
                     <div class="reviews__slider--img">
-                      <amp-img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
+                      <img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
                     </div>
                     <div class="reviews__slider--people">
                       <p itemprop="author" class="reviews__slider--name">Фамилия Имя</p>
@@ -562,7 +562,7 @@
                 <li itemscope itemtype="http://schema.org/Review" class="reviews__slider--item">
                   <div itemscope itemtype="http://schema.org/Person" class="reviews__people-box">
                     <div class="reviews__slider--img">
-                      <amp-img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
+                      <img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
                     </div>
                     <div class="reviews__slider--people">
                       <p itemprop="author" class="reviews__slider--name">Фамилия Имя</p>
@@ -577,7 +577,7 @@
                 <li itemscope itemtype="http://schema.org/Review" class="reviews__slider--item">
                   <div itemscope itemtype="http://schema.org/Person" class="reviews__people-box">
                     <div class="reviews__slider--img">
-                      <amp-img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
+                      <img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
                     </div>
                     <div class="reviews__slider--people">
                       <p itemprop="author" class="reviews__slider--name">Фамилия Имя</p>
@@ -592,7 +592,7 @@
                 <li itemscope itemtype="http://schema.org/Review" class="reviews__slider--item">
                   <div itemscope itemtype="http://schema.org/Person" class="reviews__people-box">
                     <div class="reviews__slider--img">
-                      <amp-img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
+                      <img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
                     </div>
                     <div class="reviews__slider--people">
                       <p itemprop="author" class="reviews__slider--name">Фамилия Имя</p>
@@ -607,7 +607,7 @@
                 <li itemscope itemtype="http://schema.org/Review" class="reviews__slider--item">
                   <div itemscope itemtype="http://schema.org/Person" class="reviews__people-box">
                     <div class="reviews__slider--img">
-                      <amp-img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
+                      <img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
                     </div>
                     <div class="reviews__slider--people">
                       <p itemprop="author" class="reviews__slider--name">Фамилия Имя</p>
@@ -622,7 +622,7 @@
                 <li itemscope itemtype="http://schema.org/Review" class="reviews__slider--item">
                   <div itemscope itemtype="http://schema.org/Person" class="reviews__people-box">
                     <div class="reviews__slider--img">
-                      <amp-img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
+                      <img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
                     </div>
                     <div class="reviews__slider--people">
                       <p itemprop="author" class="reviews__slider--name">Фамилия Имя</p>
@@ -637,7 +637,7 @@
                 <li itemscope itemtype="http://schema.org/Review" class="reviews__slider--item">
                   <div itemscope itemtype="http://schema.org/Person" class="reviews__people-box">
                     <div class="reviews__slider--img">
-                      <amp-img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
+                      <img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
                     </div>
                     <div class="reviews__slider--people">
                       <p itemprop="author" class="reviews__slider--name">Фамилия Имя</p>
@@ -652,7 +652,7 @@
                 <li itemscope itemtype="http://schema.org/Review" class="reviews__slider--item">
                   <div itemscope itemtype="http://schema.org/Person" class="reviews__people-box">
                     <div class="reviews__slider--img">
-                      <amp-img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
+                      <img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
                     </div>
                     <div class="reviews__slider--people">
                       <p itemprop="author" class="reviews__slider--name">Фамилия Имя</p>
@@ -664,17 +664,15 @@
                     <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Путь даль взгляд использовало составитель бросил лучше страна буквенных над? Эта, родного что, собрал правилами которой оксмокс не, приставка рыбными послушавшись запятой всеми последний безопасную силуэт свою мир точках повстречался текстами? Снова своих наш текстов пунктуация агентство текстами оксмокс которой.</p>
                   </div>
                 </li>
-                <li itemscope itemtype="http://schema.org/Review" class="reviews__slider--item">
-                  <div itemscope itemtype="http://schema.org/Person" class="reviews__people-box">
-                    <div class="reviews__slider--img">
-                      <amp-img itemprop="image" src="./img/jpg/people.jpg" alt="Фото клиента">
-                    </div>
-                    <div class="reviews__slider--people">
-                      <p itemprop="author" class="reviews__slider--name">Фамилия Имя</p>
-                      <span itemprop="jobTitle" class="reviews__slider--job">Должность/специальность</span>
-                    </div>
+                <li class="reviews__slider--item">
+                  <div class="reviews__slider--img">
+                    <img src="./img/jpg/people.jpg" alt="Фото клиента">
                   </div>
-                  <div itemprop="reviewBody" class="reviews__slider--block">
+                  <div class="reviews__slider--people">
+                    <p class="reviews__slider--name">Фамилия Имя</p>
+                    <span class="reviews__slider--job">Должность/специальность</span>
+                  </div>
+                  <div class="reviews__slider--block">
                     <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Путь даль взгляд использовало составитель бросил лучше страна буквенных над? Эта, родного что, собрал правилами которой оксмокс не, приставка рыбными послушавшись запятой всеми последний безопасную силуэт свою мир точках повстречался текстами? Снова своих наш текстов пунктуация агентство текстами оксмокс которой.</p>
                     <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Путь даль взгляд использовало составитель бросил лучше страна буквенных над? Эта, родного что, собрал правилами которой оксмокс не, приставка рыбными послушавшись запятой всеми последний безопасную силуэт свою мир точках повстречался текстами? Снова своих наш текстов пунктуация агентство текстами оксмокс которой.</p>
                   </div>
@@ -904,7 +902,6 @@
     </div>
 
     <!-- scripts -->
-    <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/MotionPathPlugin.min.js" integrity="sha512-lhK7xTsFM6DPXOtQQyPe+NmpoFEheKDHjM/5QzpFRiE1KySgtBfEzYz4XowvB+CAWcBLBGWinhh41uNaOtrSZA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
